# homeagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
db/migrations/: 0001_timescaledb.sql  0002_events.sql  0003_schedules.sql
deploy/: docker-compose.yml
deploy/mosquitto/: mosquitto.conf
deploy/systemd/: home-agent.service
docs/: ARCHITECTURE.md  CALENDAR_SETUP.md  CAMECT_SETUP.md  CAMERA_LIGHTING.md  CASETA_SETUP.md  DB_SETUP.md  DOCKER_DEPLOY.md  SCHEDULING.md  SONOS_SETUP.md
scripts/: backup_home_stack.sh  generate_offline_audio.py  sonos_discover.py  test_dashboard_scrape.py  tmux_homeagent.sh
src/home_agent/: __main__.py  app.py  cli.py  config.py  db.py  main.py  offline_audio.py
src/home_agent/bus/: envelope.py  mqtt_client.py
src/home_agent/core/: events.py  logging.py  scheduler.py
src/home_agent/integrations/: audio_host.py  dashboard_scrape.py  gcal_ics.py  internet_check.py  llm.py  llm_router.py  news_feed.py  simplefin.py  smtp_mailer.py  sonos.py  sonos_playback.py  tempstick.py  tts.py  tts_elevenlabs.py  ups_snmp.py  weather_open_meteo.py
src/home_agent/modules/: announcements.py  base.py  daily_briefing.py  heartbeat.py  registry.py  template.py
src/home_agent/services/: camect_agent.py  camera_lighting_agent.py  caseta_agent.py  event_recorder.py  exec_briefing_agent.py  fixed_announcement_agent.py  hourly_chime_agent.py  hourly_house_check_agent.py  monitor_tui.py  morning_briefing_agent.py  seed_schedules.py  sonos_gateway.py  time_trigger.py  ui_gateway.py  (+1 more)
tests/: test_event_bus.py
(+1 files in other folders)
