[project]
name = "home-agent"
version = "0.1.0"
description = "Modular home AI agent framework (LLM + integrations + scheduler)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "tenacity>=8.2",
  "apscheduler>=3.10",
  "structlog>=24.1",
  "rich>=13.7",
  "typer>=0.12",
  "paho-mqtt>=2.0",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
sonos = ["soco>=0.30"]
camect = ["camect-py>=0.2.1"]
caseta = ["pylutron-caseta>=0.26.0", "pylutron-caseta[cli]>=0.26.0"]
gcal = ["icalendar>=6.0.0", "recurring-ical-events>=2.3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
home-agent = "home_agent.cli:app"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
